--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
 
   wechat_picker_library: ^1.0.0
 
-  camera: ^0.10.0
+  camera: ^0.11.0+1
   camera_platform_interface: ^2.1.5
 
   path: ^1.8.0
